# anamator

./: .gitignore  LICENSE.txt  README.md  basic_func.py  bernstein.py  dirichlet.py  genetic.py  objects.py  settings.md  setup.cfg  setup.py  todo.md  uniconv.py  unittests.py
animator/: basic_func.py  genetic_testing.py  objects.py  settings.md  testing.py  unittests.py
bernstein/: bernstein.py
genetic/: genetic.py  genetic_testing2.py
minkowski/: circles.py  projective.py
other/: mormul.py
physics/: physics_animations.py  physics_main.py
riemann/: calling_foos.py  calling_foos2.py  riemann.py  riemann2.py  riemann_main.py  riemann_testing.py
src/anamator/: basic_func.py  objects.py
src/animator/: basic_func.py  objects.py
tests/: testing.py  testing_exec.py  unittests.py
