[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt

pypi-AgEIcHlwaS5vcmcCJGNiOTgyMjM1LWExZDYtNDg0YS05ZTg4LTRhZmNhMDlmOTk3MgACJXsicGVybWlzc2lvbnMiOiAidXNlciIsICJ2ZXJzaW9uIjogMX0AAAYgR3glmbla9PwQ4rK9ecz5H4D89ojDqzgUFhfir11S3LU